refactor:pequeñas mejoras